[package]
name = "finance_tokenizer"
version = "0.1.0"
authors = ["tcross <tom.bz2@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/finance_tokenizer"
readme = "README.md"
repository = "https://github.com/chmoder/finance_tokenizer/"
description = "A finacne tokenization library"
license = "MIT"

[dependencies]
rand = "0.7.3"
hex-literal = "0.3.0"
blake3 = "0.3.5"
credit_card = { version = "0.1.1" }